--- a/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
+++ b/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".REST_client" />
+        <activity android:name=".SOAP_client" />
+        <activity android:name=".REST_server"></activity>
     </application>
 
 </manifest>
