--- a/VS_anicolus_Webservices/app/build.gradle
+++ b/VS_anicolus_Webservices/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile project(':ksoap2-android-assembly-3.6.2-jar')
+    compile files('libs/ksoap2-android-assembly-3.6.2-jar-with-dependencies.jar')
 }
