--- a/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
+++ b/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ch.ethz.inf.vs.a2.anicolus.webservices">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,5 +23,6 @@
         <activity android:name=".SOAP_client" />
         <activity android:name=".REST_server"></activity>
     </application>
+
 
 </manifest>
