fixed XML parser and displaying temperature on textview

--- a/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
+++ b/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         <activity
             android:name=".REST_client"
             android:label="REST Client" />
-        <activity android:name=".SOAP_client" />
+        <activity
+            android:name=".SOAP_client"
+            android:label="SOAP Client" />
         <activity android:name=".REST_server" />
 
         <service
