Task 3: Can now access sensor values via Webservice. (If you can't connect to the webservice, it's the emulator's fault!! Ask Franz how to connect before changing anything!) TODO: Implement Actuators

--- a/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
+++ b/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
@@ -31,5 +31,6 @@
             android:enabled="true"
             android:exported="true"></service>
     </application>
+    <uses-permission android:name="android.permission.BODY_SENSORS"></uses-permission>
 
 </manifest>
