--- a/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
+++ b/VS_anicolus_Webservices/app/src/main/AndroidManifest.xml
@@ -32,5 +32,6 @@
             android:exported="true"></service>
     </application>
     <uses-permission android:name="android.permission.BODY_SENSORS"></uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 
 </manifest>
